# spanfbl1902_equipos

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
base_datos/: __init__.py  base_datos.py
models/: equipo.py
routers/: equipos.py
schemas/: tablas_equipos.py
utils/: logging_config.py
